--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -8,6 +8,22 @@
 </head>
 
 <body>
+    <!-- for chap 0  -->
+    <a-scene mindar-image="imageTargetSrc:chap0targets.mind" color-space="sRGB"
+        renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
+        device-orientation-permission-ui="enabled: false">
+        <a-assets>
+            <img id="card0" src="IMAGES/img25.jpg" />
+            <a-asset-item id="avatarModel0" src="HELI.glb"></a-asset-item>
+        </a-assets>
+
+        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        <a-entity mindar-image-target="targetIndex: 0">
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel0"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"></a-gltf-model>
+        </a-entity>
+    </a-scene>
+    <!-- for chap 1 -->
     <a-scene mindar-image="imageTargetSrc:chap1targets.mind" color-space="sRGB"
         renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: false">
@@ -22,7 +38,7 @@
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"></a-gltf-model>
         </a-entity>
     </a-scene>
-
+    <!-- for chap 2 -->
     <a-scene mindar-image="imageTargetSrc:chap2targets.mind" color-space="sRGB"
         renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: false">
@@ -37,6 +53,11 @@
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"></a-gltf-model>
         </a-entity>
     </a-scene>
+
+    <!-- for chap 3 -->
+
+
+
 </body>
 
 </html>
