--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -8,71 +8,58 @@
 </head>
 
 <body>
+    <a-scene color-space="sRGB" renderer="colorManagement: true; physicallyCorrectLights: true"
+        vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
-    <a-scene mindar-image="imageTargetSrc:chap0targets.mind" color-space="sRGB"
-        renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
         <a-assets>
             <img id="card0" src="IMAGES/img25.jpg" />
             <a-asset-item id="avatarModel0" src="HELI.glb"></a-asset-item>
-        </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-        <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel0"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"></a-gltf-model>
-        </a-entity>
-    </a-scene>
-
-    <a-scene mindar-image="imageTargetSrc:chap1targets.mind" color-space="sRGB"
-        renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
-        <a-assets>
             <img id="card1" src="IMAGES/img124.jpg" />
             <a-asset-item id="avatarModel" src="girl.gltf"></a-asset-item>
-        </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-        <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"></a-gltf-model>
-        </a-entity>
-    </a-scene>
-
-    <a-scene mindar-image="imageTargetSrc:chap2targets.mind" color-space="sRGB"
-        renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
-        <a-assets>
             <img id="card2" src="IMAGES/img20.jpg" />
             <a-asset-item id="avatarModel1" src="HORSE.glb"></a-asset-item>
-        </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-        <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel1"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"></a-gltf-model>
-        </a-entity>
-    </a-scene>
-
-
-    <a-scene mindar-image="imageTargetSrc:chap3targets.mind" color-space="sRGB"
-        renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
-        <a-assets>
             <img id="card3" src="IMAGES/img54.jpg" />
             <a-asset-item id="avatarModel2" src="Bunny.glb"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-        <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel2"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"></a-gltf-model>
+
+        <a-entity mindar-image-target="targetIndex: 0" id="target0"
+            mindar-image="src: #card0; onImageFound: #target0.setAttribute('visible', false);">
+            <a-image src="#card0" position="0 0 0.1" scale="1 1 1"></a-image>
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel0"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-gltf-model>
         </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 1" id="target1"
+            mindar-image="src: #card1; onImageFound: #target1.setAttribute('visible', false);">
+            <a-image src="#card1" position="0 0 0.1" scale="1 1 1"></a-image>
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 2" id="target2"
+            mindar-image="src: #card2; onImageFound: #target2.setAttribute('visible', false);">
+            <a-image src="#card2" position="0 0 0.1" scale="1 1 1"></a-image>
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel1"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 3" id="target3"
+            mindar-image="src: #card3; onImageFound: #target3.setAttribute('visible', false);">
+            <a-image src="#card3" position="0 0 0.1" scale="1 1 1"></a-image>
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel2"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-gltf-model>
+        </a-entity>
+
     </a-scene>
-
-
-
-
 </body>
 
 </html>
