--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -20,7 +20,7 @@
             <a-asset-item id="avatarModel0" src="HELI.glb"></a-asset-item>
             <a-asset-item id="avatarModel1" src="girl.gltf"></a-asset-item>
             <a-asset-item id="avatarModel2" src="HORSE.glb"></a-asset-item>
-            <a-asset-item id="avatarModel3" src="Bunny.glb"></a-asset-item>
+            <a-asset-item id="avatarModel3" src="HORSE.glb"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
