--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -27,30 +27,22 @@
 
         <a-entity mindar-image="imageTargetSrc:chap0targets.mind" mindar-image-target="targetIndex: 0">
             <a-image src="#card0"></a-image>
-            <a-entity gltf-model="#avatarModel0"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-            </a-entity>
+            <a-entity gltf-model="#avatarModel0"></a-entity>
         </a-entity>
 
         <a-entity mindar-image="imageTargetSrc:chap1targets.mind" mindar-image-target="targetIndex: 0">
             <a-image src="#card1"></a-image>
-            <a-entity gltf-model="#avatarModel1"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-            </a-entity>
+            <a-entity gltf-model="#avatarModel1"></a-entity>
         </a-entity>
 
         <a-entity mindar-image="imageTargetSrc:chap2targets.mind" mindar-image-target="targetIndex: 0">
             <a-image src="#card2"></a-image>
-            <a-entity gltf-model="#avatarModel2"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-            </a-entity>
+            <a-entity gltf-model="#avatarModel2"></a-entity>
         </a-entity>
 
         <a-entity mindar-image="imageTargetSrc:chap3targets.mind" mindar-image-target="targetIndex: 0">
             <a-image src="#card3"></a-image>
-            <a-entity gltf-model="#avatarModel3"
-                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-            </a-entity>
+            <a-entity gltf-model="#avatarModel3"></a-entity>
         </a-entity>
 
     </a-scene>
