--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -1,50 +1,33 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 </head>
 
 <body>
-    <a-scene color-space="sRGB" renderer="colorManagement: true; physicallyCorrectLights: true"
-        vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene embedded arjs="sourceType: webcam;">
+        <a-marker preset="custom" type="pattern" url="chap0targets.mind">
+            <a-image src="IMAGES/img25.jpg"></a-image>
+            <a-entity gltf-model="HELI.glb"></a-entity>
+        </a-marker>
 
-        <a-assets>
-            <img id="card0" src="IMAGES/img25.jpg" />
-            <img id="card1" src="IMAGES/img124.jpg" />
-            <img id="card2" src="IMAGES/img20.jpg" />
-            <img id="card3" src="IMAGES/img54.jpg" />
+        <a-marker preset="custom" type="pattern" url="chap1targets.mind">
+            <a-image src="IMAGES/img124.jpg"></a-image>
+            <a-entity gltf-model="girl.gltf"></a-entity>
+        </a-marker>
 
-            <a-asset-item id="avatarModel0" src="HELI.glb"></a-asset-item>
-            <a-asset-item id="avatarModel1" src="girl.gltf"></a-asset-item>
-            <a-asset-item id="avatarModel2" src="HORSE.glb"></a-asset-item>
-            <a-asset-item id="avatarModel3" src="Bunny.glb"></a-asset-item>
-        </a-assets>
+        <a-marker preset="custom" type="pattern" url="chap2targets.mind">
+            <a-image src="IMAGES/img20.jpg"></a-image>
+            <a-entity gltf-model="HORSE.glb"></a-entity>
+        </a-marker>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        <a-marker preset="custom" type="pattern" url="chap3targets.mind">
+            <a-image src="IMAGES/img54.jpg"></a-image>
+            <a-entity gltf-model="Bunny.glb"></a-entity>
+        </a-marker>
 
-        <a-entity mindar-image="imageTargetSrc:chap0targets.mind" mindar-image-target="targetIndex: 0">
-            <a-image src="#card0"></a-image>
-            <a-entity gltf-model="#avatarModel0"></a-entity>
-        </a-entity>
-
-        <a-entity mindar-image="imageTargetSrc:chap1targets.mind" mindar-image-target="targetIndex: 0">
-            <a-image src="#card1"></a-image>
-            <a-entity gltf-model="#avatarModel1"></a-entity>
-        </a-entity>
-
-        <a-entity mindar-image="imageTargetSrc:chap2targets.mind" mindar-image-target="targetIndex: 0">
-            <a-image src="#card2"></a-image>
-            <a-entity gltf-model="#avatarModel2"></a-entity>
-        </a-entity>
-
-        <a-entity mindar-image="imageTargetSrc:chap3targets.mind" mindar-image-target="targetIndex: 0">
-            <a-image src="#card3"></a-image>
-            <a-entity gltf-model="#avatarModel3"></a-entity>
-        </a-entity>
-
+        <a-camera></a-camera>
     </a-scene>
 </body>
 
