--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ar.js/aframe/build/aframe-ar.js"></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             <a-entity gltf-model="Bunny.glb"></a-entity>
         </a-marker>
 
-        <a-camera></a-camera>
+        <a-entity camera></a-entity>
     </a-scene>
 </body>
 
