--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -3,11 +3,30 @@
 
 <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script>
+        AFRAME.registerComponent('image-scanner', {
+            init: function () {
+                this.el.addEventListener('mindar-image-found', (event) => {
+                    const targetIndex = event.detail.targetIndex;
+                    const modelId = `avatarModel${targetIndex}`;
+                    const modelEl = document.querySelector(`#${modelId}`);
+                    modelEl.setAttribute('visible', true);
+                });
+
+                this.el.addEventListener('mindar-image-lost', (event) => {
+                    const targetIndex = event.detail.targetIndex;
+                    const modelId = `avatarModel${targetIndex}`;
+                    const modelEl = document.querySelector(`#${modelId}`);
+                    modelEl.setAttribute('visible', false);
+                });
+            }
+        });
+    </script>
 </head>
 
 <body>
     <a-scene color-space="sRGB" renderer="colorManagement: true; physicallyCorrectLights: true"
-        vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+        vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" image-scanner>
 
         <a-assets>
             <!-- Image targets -->
@@ -27,32 +46,31 @@
 
         <!-- Image target 0 -->
         <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel0"
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel0" visible="false"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-gltf-model>
         </a-entity>
 
         <!-- Image target 1 -->
         <a-entity mindar-image-target="targetIndex: 1">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel1"
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel1" visible="false"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-gltf-model>
         </a-entity>
 
         <!-- Image target 2 -->
         <a-entity mindar-image-target="targetIndex: 2">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel2"
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel2" visible="false"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-gltf-model>
         </a-entity>
 
         <!-- Image target 3 -->
         <a-entity mindar-image-target="targetIndex: 3">
-            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel3"
+            <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="1 1 1" src="#avatarModel3" visible="false"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-gltf-model>
         </a-entity>
-
     </a-scene>
 </body>
 
