--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -2,28 +2,56 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.1/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 </head>
 
 <body>
-    <a-scene color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: false">
+    <a-scene color-space="sRGB" renderer="colorManagement: true; physicallyCorrectLights: true"
+        vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
-        <!-- First AR scene with image target and glTF model -->
-        <a-entity mindar-image-target="targetIndex: 0">
-            <a-plane src="image1.jpg" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-            <a-gltf-model src="model1.gltf" position="0 0 0.1" scale="0.005 0.005 0.005"></a-gltf-model>
+        <a-assets>
+            <img id="card0" src="IMAGES/img25.jpg" />
+            <img id="card1" src="IMAGES/img124.jpg" />
+            <img id="card2" src="IMAGES/img20.jpg" />
+            <img id="card3" src="IMAGES/img54.jpg" />
+
+            <a-asset-item id="avatarModel0" src="HELI.glb"></a-asset-item>
+            <a-asset-item id="avatarModel1" src="girl.gltf"></a-asset-item>
+            <a-asset-item id="avatarModel2" src="HORSE.glb"></a-asset-item>
+            <a-asset-item id="avatarModel3" src="Bunny.glb"></a-asset-item>
+        </a-assets>
+
+        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+        <a-entity mindar-image="imageTargetSrc:chap0targets.mind" mindar-image-target="targetIndex: 0">
+            <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel0"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-entity>
+            <a-image src="#card0"></a-image>
         </a-entity>
 
-        <!-- Second AR scene with image target and glTF model -->
-        <a-entity mindar-image-target="targetIndex: 1">
-            <a-plane src="image2.jpg" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-            <a-gltf-model src="model2.gltf" position="0 0 0.1" scale="0.005 0.005 0.005"></a-gltf-model>
+        <a-entity mindar-image="imageTargetSrc:chap1targets.mind" mindar-image-target="targetIndex: 1">
+            <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel1"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-entity>
+            <a-image src="#card1"></a-image>
         </a-entity>
 
-        <!-- Additional AR scenes with image targets and glTF models -->
-        <!-- Add more a-entity elements with different image targets and glTF models as needed -->
+        <a-entity mindar-image="imageTargetSrc:chap2targets.mind" mindar-image-target="targetIndex: 2">
+            <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel2"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-entity>
+            <a-image src="#card2"></a-image>
+        </a-entity>
+
+        <a-entity mindar-image="imageTargetSrc:chap3targets.mind" mindar-image-target="targetIndex: 3">
+            <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel3"
+                animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+            </a-entity>
+            <a-image src="#card3"></a-image>
+        </a-entity>
 
     </a-scene>
 </body>
