--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -11,42 +11,47 @@
     <a-scene color-space="sRGB" renderer="colorManagement: true; physicallyCorrectLights: true"
         vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
+        <!-- Asset Definitions -->
         <a-assets>
+            <!-- Image assets -->
             <img id="card0" src="IMAGES/img25.jpg" />
             <img id="card1" src="IMAGES/img124.jpg" />
             <img id="card2" src="IMAGES/img20.jpg" />
             <img id="card3" src="IMAGES/img54.jpg" />
 
+            <!-- Model assets -->
             <a-asset-item id="avatarModel0" src="HELI.glb"></a-asset-item>
             <a-asset-item id="avatarModel1" src="girl.gltf"></a-asset-item>
             <a-asset-item id="avatarModel2" src="HORSE.glb"></a-asset-item>
             <a-asset-item id="avatarModel3" src="Bunny.glb"></a-asset-item>
         </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        <!-- Camera -->
+        <a-camera position="0 1.6 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image="imageTargetSrc:chap0targets.mind" mindar-image-target="targetIndex: 0">
+        <!-- AR Entities -->
+        <a-entity mindar-image="imageTargetSrc: chap0targets.mind" mindar-image-target="targetIndex: 0">
             <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel0"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-entity>
             <a-image src="#card0"></a-image>
         </a-entity>
 
-        <a-entity mindar-image="imageTargetSrc:chap1targets.mind" mindar-image-target="targetIndex: 1">
+        <a-entity mindar-image="imageTargetSrc: chap1targets.mind" mindar-image-target="targetIndex: 1">
             <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel1"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-entity>
             <a-image src="#card1"></a-image>
         </a-entity>
 
-        <a-entity mindar-image="imageTargetSrc:chap2targets.mind" mindar-image-target="targetIndex: 2">
+        <a-entity mindar-image="imageTargetSrc: chap2targets.mind" mindar-image-target="targetIndex: 2">
             <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel2"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-entity>
             <a-image src="#card2"></a-image>
         </a-entity>
 
-        <a-entity mindar-image="imageTargetSrc:chap3targets.mind" mindar-image-target="targetIndex: 3">
+        <a-entity mindar-image="imageTargetSrc: chap3targets.mind" mindar-image-target="targetIndex: 3">
             <a-entity gltf-model="rotation: 0 0 0; position: 0 0 0.1; scale: 1 1 1; src: #avatarModel3"
                 animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
             </a-entity>
