--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -18,7 +18,7 @@
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image="imageTargetSrc:chap0targets.mind" mindar-image-target="targetIndex: 0">
+        <a-entity mindar-image="imageTargetSrc:covertargets.mind" mindar-image-target="targetIndex: 0">
             <a-entity gltf-model="rotation: 0 0 0; position: 0 -0.25 0; scale: 0.05 0.05 0.05; src: #raccoonModel"
                 animation-mixer>
             </a-entity>
