--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -19,13 +19,12 @@
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
-            <a-entity gltf-model="src: #raccoonModel" animation-mixer position="0 -0.25 0"
-                scale="0.05 0.05 0.05"></a-entity>
+            <a-gltf-model src="#raccoonModel" animation-mixer position="0 -0.25 0"
+                scale="0.05 0.05 0.05"></a-gltf-model>
         </a-entity>
 
         <a-entity mindar-image-target="targetIndex: 1">
-            <a-entity gltf-model="src: #bearModel" animation-mixer position="0 -0.25 0"
-                scale="0.05 0.05 0.05"></a-entity>
+            <a-gltf-model src="#bearModel" animation-mixer position="0 -0.25 0" scale="0.05 0.05 0.05"></a-gltf-model>
         </a-entity>
     </a-scene>
 </body>
