--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -12,19 +12,18 @@
         renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: false">
         <a-assets>
-            <a-asset-item id="bearModel" src="girl.gltf"></a-asset-item>
-            <a-asset-item id="raccoonModel" src="HORSE.glb"></a-asset-item>
+            <a-asset-item id="girl" src="girl.gltf"></a-asset-item>
+            <a-asset-item id="HORSE" src="HORSE.glb"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model src="#raccoonModel" animation-mixer position="0 -0.25 0"
-                scale="0.05 0.05 0.05"></a-gltf-model>
+            <a-gltf-model src="#girl" animation-mixer position="0 -0.25 0" scale="0.05 0.05 0.05"></a-gltf-model>
         </a-entity>
 
         <a-entity mindar-image-target="targetIndex: 1">
-            <a-gltf-model src="#bearModel" animation-mixer position="0 -0.25 0" scale="0.05 0.05 0.05"></a-gltf-model>
+            <a-gltf-model src="#HORSE" animation-mixer position="0 -0.25 0" scale="0.05 0.05 0.05"></a-gltf-model>
         </a-entity>
     </a-scene>
 </body>
