--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-    <a-scene mindar-image="imageTargetSrc:targets.mind; maxTrack: 4" color-space="sRGB"
+    <a-scene mindar-image="imageTargetSrc: targets.mind; maxTrack: 4" color-space="sRGB"
         renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: false">
         <a-assets>
-            <a-asset-item id="Bunny" src="Bunny.glb"></a-asset-item>
-            <a-asset-item id="HELI" src="HELI.glb"></a-asset-item>
+            <a-asset-item id="Bunny" src="girl.gltf"></a-asset-item>
+            <a-asset-item id="Chunny" src="HELI.glb"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -23,7 +23,7 @@
                 animation-mixer></a-gltf-model>
         </a-entity>
         <a-entity mindar-image-target="targetIndex: 1">
-            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#HELI"
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Chunny"
                 animation-mixer></a-gltf-model>
         </a-entity>
     </a-scene>
