--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -8,12 +8,31 @@
 </head>
 
 <body>
-    <a-scene mindar-image="imageTargetSrc: targets.mind; maxTrack: 4" color-space="sRGB"
+    <a-scene mindar-image="imageTargetSrc: targets.mind; maxTrack: 25" color-space="sRGB"
         renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: false">
         <a-assets>
             <a-asset-item id="Bunny" src="girl.gltf"></a-asset-item>
-            <a-asset-item id="Chunny" src="HELI.glb"></a-asset-item>
+            <a-asset-item id="Chunny" src="HELI.gltf"></a-asset-item>
+            <a-asset-item id="hut" src="hut.gltf"></a-asset-item>
+            <a-asset-item id="bus" src="bus.gltf"></a-asset-item>
+            <a-asset-item id="building" src="building.gltf"></a-asset-item>
+            <a-asset-item id="bathtub" src="bathtub.gltf"></a-asset-item>
+            <a-asset-item id="car" src="car.gltf"></a-asset-item>
+            <a-asset-item id="cow" src="bus.gltf"></a-asset-item>
+            <a-asset-item id="Tunger" src="hut.gltf"></a-asset-item>
+            <a-asset-item id="Pow" src="HELI.gltf"></a-asset-item>
+            <a-asset-item id="Put" src="girl.gltf"></a-asset-item>
+            <a-asset-item id="Low" src="HORSE.glb"></a-asset-item>
+            <a-asset-item id="Kite" src="building.gltf"></a-asset-item>
+            <a-asset-item id="Nest" src="girl.gltf"></a-asset-item>
+            <a-asset-item id="Test" src="bus.gltf"></a-asset-item>
+            <a-asset-item id="Lichi" src="car.gltf"></a-asset-item>
+            <a-asset-item id="Mist" src="hut.gltf"></a-asset-item>
+            <a-asset-item id="Beast" src="HELI.gltf"></a-asset-item>
+            <a-asset-item id="Tea" src="bathtub.gltf"></a-asset-item>
+            <a-asset-item id="Coffee" src="building.gltf"></a-asset-item>
+            <a-asset-item id="Break" src="hut.gltf"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -22,10 +41,107 @@
             <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Bunny"
                 animation-mixer></a-gltf-model>
         </a-entity>
+
         <a-entity mindar-image-target="targetIndex: 1">
             <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Chunny"
                 animation-mixer></a-gltf-model>
         </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 2">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#hut"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 3">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#bus"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 4">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#building"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 5">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#bathtub"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 6">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Car"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 7">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Cow"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 8">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Tunger"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 9">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Pow"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 10">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Put"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 11">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Low"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 12">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Kite"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 13">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Nest"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 14">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Test"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 15">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Lichi"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 16">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Mist"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 17">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Beast"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 18">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Tea"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 19">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Coffee"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
+        <a-entity mindar-image-target="targetIndex: 20">
+            <a-gltf-model rotation="0 0 0" position="0 -0.25 0" scale="0.05 0.05 0.05" src="#Break"
+                animation-mixer></a-gltf-model>
+        </a-entity>
+
     </a-scene>
 </body>
 
