--- a/MIND-AR COMPILED IMAGES/index.html
+++ b/MIND-AR COMPILED IMAGES/index.html
@@ -23,7 +23,7 @@
             <a-asset-item id="Tunger" src="hut.gltf"></a-asset-item>
             <a-asset-item id="Pow" src="HELI.gltf"></a-asset-item>
             <a-asset-item id="Put" src="girl.gltf"></a-asset-item>
-            <a-asset-item id="Low" src="HORSE.glb"></a-asset-item>
+            <a-asset-item id="Low" src="hut.gltf"></a-asset-item>
             <a-asset-item id="Kite" src="building.gltf"></a-asset-item>
             <a-asset-item id="Nest" src="girl.gltf"></a-asset-item>
             <a-asset-item id="Test" src="bus.gltf"></a-asset-item>
